# smol-multisig

./: README.md
.github/actions/setup-anchor/: action.yml
.github/actions/setup-dep/: action.yml
.github/actions/setup-solana/: action.yml
.github/workflows/: test.yml
secp256k1-multisig/: Anchor.toml  package.json
secp256k1-multisig/programs/secp256k1-multisig/: Cargo.toml
secp256k1-multisig/programs/secp256k1-multisig/src/: lib.rs
secp256k1-multisig/tests/: secp256k1-multisig.ts
stateless_eth_multisig/: Anchor.toml  package.json  tsconfig.json
stateless_eth_multisig/programs/stateless_eth_multisig/: Cargo.toml
stateless_eth_multisig/programs/stateless_eth_multisig/src/: errors.rs  lib.rs  verifier.rs
stateless_eth_multisig/scripts/: sig_builder.ts
stateless_eth_multisig/tests/: stateless_eth_multisig.ts
stateless_eth_multisig/utils/: secp256k1.ts
stateless_multisig/: Anchor.toml  package.json
stateless_multisig/programs/stateless_multisig/: Cargo.toml
stateless_multisig/programs/stateless_multisig/src/: errors.rs  lib.rs  verifier.rs
stateless_multisig/scripts/: sig_builder.ts
stateless_multisig/tests/: stateless_multisig.ts
stateless_multisig/utils/: ed25519.ts
tokens/: Anchor.toml  README.md
tokens/programs/token_multis/: Cargo.toml
tokens/programs/token_multis/src/: lib.rs
tokens/programs/tokens/: Cargo.toml
tokens/programs/tokens/src/: lib.rs
tokens/tests/: test_multisig.ts  tokens.ts
